feat: create first endpoint and database connection via .env

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=cadastroalunos
+spring.datasource.url=jdbc:postgresql://localhost:5432/aluno_db
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+# spring.security.token.secret=${JWT_SECRET:secret-key}
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
